<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.LoginActivity"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IKLANIN"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="end"
        android:text="@string/masuk"
        android:backgroundTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFF"
        />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <Button
        android:id="@+id/btn_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/daftar_sekarang"
        android:backgroundTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFF"
        />

</androidx.appcompat.widget.LinearLayoutCompat>