<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.IdentitasDiriActivity"
    android:padding="16dp"
    >

    <!--Nama Layanan bus-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_Layanan_Bus"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--deskripsi layanan bus-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi_layanan_bus"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!--input jumlah bus-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_bus"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamat"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        />

    <!--input alamat kota-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kota"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--input alamat layanan bus-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat_spesifik"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_lanjutkan_identitas_diri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanjutkan"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#FFF"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/persetujuan" />
    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>