<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegistrationActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_sebagai"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <ImageView
                android:layout_weight=".3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_usaha"
                android:layout_marginStart="64dp"
                />

            <Button
                android:id="@+id/btn_register_as_pengiklan"
                android:layout_weight=".4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#FFF"
                android:text="@string/pengiklan"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="1"
            >

            <ImageView
                android:layout_weight=".3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_pengiklan"
                android:layout_marginStart="64dp"
                />

            <Button
                android:id="@+id/btn_register_as_penerbit"
                android:layout_weight=".4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#FFF"
                android:text="@string/penerbit"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>